<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:hint="@string/medicine"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="42dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:hint="@string/purchase_date"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:hint="@string/expiry_date"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="42dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:hint="@string/replacement_reminder"
        android:minHeight="48dp"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="42dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="456dp"
        android:text="@string/enter_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="255dp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/add_new_medicine"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="120dp" />


</androidx.constraintlayout.widget.ConstraintLayout>