<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textSelectedChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="No child selected"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSelectedChild">

        <TextView
            android:id="@+id/textWeeklyRescue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weekly_rescue_count"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textChildZone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/child_zone_text"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="168dp"
        android:text="@string/my_dashboard"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textLastRescue"
        android:layout_width="140dp"
        android:layout_height="21dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="228dp"
        android:text="@string/last_rescue_time"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTrendSnippet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="344dp"
        android:text="@string/trend_snippet"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="116dp"
        android:layout_height="88dp"
        android:layout_marginTop="752dp"
        android:layout_marginEnd="210dp"
        android:onClick="medicine_log"
        android:text="@string/child_log_medicine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="116dp"
        android:layout_height="88dp"
        android:layout_marginTop="644dp"
        android:layout_marginEnd="210dp"
        android:onClick="peak_flow"
        android:text="@string/peak_flow_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="116dp"
        android:layout_height="88dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="308dp"
        android:onClick="manage_child"
        android:text="@string/manage_child_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toggleButton" />

    <Button
        android:id="@+id/button5"
        android:layout_width="116dp"
        android:layout_height="88dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="752dp"
        android:layout_marginEnd="70dp"
        android:onClick="Inventory"
        android:text="@string/Inventory_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="incident_log"
        android:text="@string/incident_log_button"
        android:textColor="#000000"
        app:backgroundTint="@color/light_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="576dp"
        android:onClick="add_action_plan"
        android:text="Add Action Plan"
        android:textColor="#ffffff"
        app:backgroundTint="@color/turquoise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chooseChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Choose Child"
        android:textColor="#ffffff"
        app:backgroundTint="@color/turquoise"
        app:layout_constraintStart_toEndOf="@id/textSelectedChild"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:layout_marginTop="80dp"
        android:onClick="provider"
        android:text="Invite Provider"
        android:textColor="#ffffff"
        app:backgroundTint="@color/turquoise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageNotifications"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="16dp"
        android:onClick="notifications"
        android:src="@drawable/notifications_button"
        android:contentDescription="@string/notifications_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNotificationBadge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@drawable/notification_badge"
        android:gravity="center"
        android:minWidth="20dp"
        android:minHeight="20dp"
        android:padding="2dp"
        android:text="0"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/imageNotifications"
        app:layout_constraintEnd_toEndOf="@id/imageNotifications" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="28dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:textOff="7 days"
        android:textOn="30 days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/buttonParentSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="signOut"
        android:text="@string/sign_out_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
